--- a/Nav.html
+++ b/Nav.html
@@ -15,7 +15,7 @@
 
 	<ul class="nav d-flex flex-md-row bg-success">
 		<li class="nav-item active pl-3">
-			<a class="nav-link text-white" href="nav.html"><h5><i class="fas fa-home"></i></h5></a>
+			<a class="nav-link text-white" href="nav.html"><h5>Farm<span class="bg-dark pl-1 pr-1 text-warning">hub</span></h5></a>
 		</li>
 		<li class="nav-item active ml-auto">
 			<a class="nav-link text-white" href="login.html"><h5>Login</h5></a>
